scss/styles.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.section {
  margin-top: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
}
.section button {
  text-align: center;
  padding: 0.5rem 1rem;
  border-radius: 6px;
  max-width: -moz-fit-content;
  max-width: fit-content;
}
.section .sect {
  display: flex;
  flex-direction: column;
}
.section .sect h2 {
  margin: 1.2rem 0;
}
.section .sect p {
  margin-bottom: 3rem;
}
.section .analytics img {
  max-inline-size: 100%;
  -o-object-fit: contain;
     object-fit: contain;
}

.sidebar {
  height: 100%;
  width: 0;
  position: fixed;
  top: 0;
  right: 0;
  overflow: hidden;
  transition: 0.5s;
  padding-top: 3.75rem;
  z-index: 1;
  background-color: #F9F7EE;
}

.baritem {
  padding: 0.5rem 1.8rem 0.5rem 1.8rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 1rem;
  cursor: pointer;
  text-align: left;
  font-size: 1.5rem;
}
.baritem a {
  text-decoration: none;
  color: #000000;
}

a:first-child {
  color: #fc7f3a;
}

a:hover {
  color: #fc7f3a;
}

.sidebar div {
  cursor: pointer;
  text-align: left;
}

.sidebar .closebtn {
  position: absolute;
  top: 0;
  left: 1.56rem;
  font-size: 36px;
  float: left;
}

.closebtn:hover {
  color: #fc7f3a;
}

.openbtn:hover {
  color: #fc7f3a;
}

.openbtn {
  display: block;
  font-size: 1.7rem;
  cursor: pointer;
  float: right;
  background-color: #FFFFFF;
  border: none;
}

.openbtn.hide {
  display: none;
}

#main {
  transition: margin-right 0.5s;
}

h1 {
  font-size: clamp(2.5rem, 4vw, 5.75rem);
  text-align: center;
}

h2 {
  font-size: clamp(1.875rem, 2.5vw, 3.5rem);
}

body {
  margin: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-family: system-ui, -apple-system;
  background-color: #FFFFFF;
}

img {
  max-inline-size: 100%;
  -o-object-fit: contain;
     object-fit: contain;
}

header {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.logo {
  display: flex;
}

.desktop_menu {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: inherit;
  gap: 4rem;
  border: 1px solid #000000;
  border-radius: 10px;
  font-size: large;
  background-color: #FFFFFF;
  min-width: 32rem;
  min-height: 2.5rem;
}
.desktop_menu a {
  text-decoration: none;
  color: #000000;
}
.desktop_menu .option1 {
  color: #fc7f3a;
  padding-left: 1rem;
}
.desktop_menu .option5 {
  padding-right: 1rem;
}

.getStarted button {
  background-color: #fc7f3a;
  color: #FFFFFF;
  min-width: 8rem;
  min-height: 2.5rem;
  border-radius: 10px;
  border: #fc7f3a;
}

#getStarted {
  transition: transform 0.3s ease-in-out;
}

#getStarted:hover {
  transform: scale(1.2);
  cursor: pointer;
}

@media screen and (max-width: 36rem) {
  .desktop_menu,
  .getStarted button {
    display: none;
  }
}
@media screen and (min-width: 36rem) and (max-width: 62rem) {
  header {
    justify-content: center;
    flex-wrap: wrap;
  }
  .menu {
    display: none;
  }
  .desktop_menu {
    border: none;
    gap: 2rem;
  }
  .desktop_menu a:hover {
    color: #fc7f3a;
  }
  .getStarted button {
    display: none;
  }
  h1 {
    max-inline-size: 26ch;
  }
}
@media screen and (min-width: 62.063rem) {
  header {
    justify-content: space-evenly;
    flex-wrap: nowrap;
  }
  .menu {
    display: none;
  }
  h1 {
    max-inline-size: 22ch;
  }
  a:hover {
    color: #fc7f3a;
  }
}
.section1 {
  margin-top: 5rem;
  margin-bottom: 5rem;
  align-items: center;
  display: flex;
  flex-direction: column;
}
.section1 .section1 div {
  display: flex;
  justify-content: center;
  align-items: center;
}
.section1 .button1 {
  margin: 2rem 0 2rem 0;
  min-width: 11.8rem;
  min-height: 3.3rem;
  border-radius: 10px;
  background-color: #000000;
  color: #FFFFFF;
}
.section1 .button1:hover {
  transform: scale(1.2);
  cursor: pointer;
}
.section1 .button1 {
  transition: transform 0.4s ease-in-out;
}

.section2 {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end;
  justify-content: center;
  gap: 3.5rem;
  background-color: #FFFFFF;
}
.section2 button {
  border: 1px solid #ff8484;
  border-radius: 6px;
  background-color: #ff8484;
  padding: 0.6rem 1.5rem;
  color: #FFFFFF;
  text-align: center;
  margin-bottom: 1.5rem;
}
.section2 h2 {
  max-inline-size: 18ch;
}
.section2 .wellbeing {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}
.section2 .wellbeing h3 {
  font-size: clamp(1.375rem, 3.5vw, 1.625rem);
}
.section2 .sect2_div {
  display: flex;
  gap: 1rem;
  align-items: center;
}
.section2 .sect2_div div {
  padding-top: 2.2rem;
  max-inline-size: 22ch;
}

.analytic {
  background-color: #fc7f3a;
  border: 1px solid #fc7f3a;
  color: #FFFFFF;
}

h2 {
  max-inline-size: 24ch;
}

.analytics {
  display: flex;
  flex-wrap: wrap;
}

.sect p {
  max-inline-size: 38ch;
}

@media screen and (min-width: 36rem) {
  .analytics {
    justify-content: center;
    align-items: center;
    gap: 6.25rem;
  }
  h2 {
    max-inline-size: 16ch;
  }
}
.flexibility {
  background-color: #ffc31f;
  border: 1px solid #ffc31f;
  color: #000000;
}

.business {
  background-color: #6652da;
  border: 1px solid #6652da;
  color: #FFFFFF;
}

.section6 {
  margin-top: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}
.section6 .button {
  text-align: center;
  padding: 0.5rem 1rem;
  border-radius: 6px;
  color: #FFFFFF;
  background-color: #ff8484;
  border: 1px solid #ff8484;
  max-width: -moz-fit-content;
  max-width: fit-content;
}
.section6 h2 {
  text-align: center;
}
.section6 .cities {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* SECTION 7 */
.section7 {
  margin-top: 4.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.section7 .citys {
  margin-bottom: 1rem;
}
.section7 .marquees {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}
.section7 .marquees .city {
  display: none;
}

.exception {
  border: 1px solid black;
  border-radius: 10px;
  padding: 2rem;
  max-width: 20.938rem;
  min-height: 26.125rem;
}
.exception .siemens {
  padding-bottom: 3rem;
}
.exception div {
  display: flex;
  justify-content: center;
}
.exception p {
  line-height: 2.125rem;
}

.section8 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 1rem;
  margin-top: 5rem;
}
.section8 .button_container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  border-radius: 10px;
  border: 1px solid #000000;
}
.section8 p {
  margin-bottom: 1.5rem;
}
.section8 .option1,
.section8 .option2 {
  display: inline-block;
  padding: 12px 2.5rem;
  margin: 3px;
  color: #fff;
  cursor: pointer;
  outline: none;
  transition: background-color 0.3s ease;
}
.section8 .option1 {
  background-color: #000000;
  border-radius: 10px;
}
.section8 .option2 {
  background-color: #FFFFFF;
  color: #000000;
  border-radius: 10px;
}
.section8 .option1:hover {
  background-color: #6652da;
}
.section8 .option2:hover {
  background-color: #ffc31f;
}

.section9 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  margin-top: 5.5rem;
}
.section9 .sect9_1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1.5rem;
  border: 1px solid black;
  border-radius: 10px;
  padding: 2rem;
  max-width: 20.938rem;
  min-height: 26.125rem;
}
.section9 .sect9_1 span {
  font-size: small;
}
.section9 .sect9_1 button {
  background-color: #ffc31f;
  border: 1px solid #ffc31f;
  padding: 1.2rem;
  border-radius: 10px;
  margin-bottom: 1rem;
}
.section9 .benefits {
  display: flex;
  gap: 1rem;
}
.section9 .benefits:last-of-type {
  margin-bottom: 1rem;
}
.section9 .sect9_2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1.5rem;
  border: 1px solid black;
  border-radius: 10px;
  padding: 2rem;
  max-width: 21rem;
  min-height: 26rem;
}
.section9 .sect9_2 span {
  font-size: small;
}
.section9 .sect9_2 button {
  background-color: #fc7f3a;
  border: 1px solid #fc7f3a;
  color: #FFFFFF;
  padding: 1.2rem;
  border-radius: 10px;
  margin-bottom: 1rem;
}
.section9 .sect9_3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1.5rem;
  border: 1px solid black;
  border-radius: 10px;
  padding: 2rem;
  max-width: 21rem;
  min-height: 26rem;
}
.section9 .sect9_3 button {
  background-color: #ff8484;
  border: 1px solid #ff8484;
  color: #FFFFFF;
  padding: 1.2rem;
  border-radius: 10px;
  margin-bottom: 1rem;
}
.section9 .sect9_3 .benefits:last-of-type {
  margin-bottom: 5rem;
}

.section10 {
  margin-top: 7rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
.section10 .section10_div {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  border: 1px solid #000000;
  padding: 1rem;
  max-width: 21rem;
  min-height: 26rem;
  border-radius: 10px;
  color: #FFFFFF;
  background-color: #000000;
}
.section10 .section10_div h2 {
  margin-bottom: 3rem;
}
.section10 .section10_div button {
  padding: 1rem 3.5rem;
  border-radius: 10px;
  border: 1px solid #000000;
  margin-bottom: 6rem;
}
.section10 .section10_div .nav {
  display: flex;
  gap: 1rem;
  margin-bottom: 3rem;
}
.section10 .section10_div .nav a {
  text-decoration: none;
  color: #FFFFFF;
}
.section10 .section10_div .nav a:first-of-type {
  color: #fc7f3a;
}
.section10 .section10_div p {
  margin-bottom: 1rem;
}/*# sourceMappingURL=styles.css.map */

